Fix T73348: Surface Deform distortion on bind with small faces

Thanks to @CodyWinch for finding the root cause